--- a/Probe_LA_v5_calibrate_table.ioc
+++ b/Probe_LA_v5_calibrate_table.ioc
@@ -9,7 +9,7 @@ Mcu.UserName=STM32F103C8Tx
 SPI1.VirtualType=VM_MASTER
 ADC1.ContinuousConvMode=ENABLE
 RCC.PLLCLKFreq_Value=72000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_CRC_Init-CRC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true
 PA11.Mode=Device
 RCC.ADCFreqValue=12000000
 PB13.Signal=GPIO_Input
@@ -199,7 +199,7 @@ Mcu.Pin11=PB14
 Mcu.Pin12=PA10
 Mcu.Pin10=PB13
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_RESET
-PB12.GPIO_PuPd=GPIO_PULLUP
+PB12.GPIO_PuPd=GPIO_NOPULL
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.APB1Freq_Value=36000000
 VP_CRC_VS_CRC.Mode=CRC_Activate
