--- a/Probe_LA_v5_calibrate_table.ioc
+++ b/Probe_LA_v5_calibrate_table.ioc
@@ -3,21 +3,24 @@ Mcu.Family=STM32F1
 ProjectManager.MainLocation=Core/Src
 NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.MCOFreq_Value=72000000
+PB13.GPIOParameters=GPIO_ModeDefaultEXTI
 USB_DEVICE.CLASS_NAME_FS=CDC
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F103C8Tx
 SPI1.VirtualType=VM_MASTER
 ADC1.ContinuousConvMode=ENABLE
+SH.GPXTI14.0=GPIO_EXTI14
 RCC.PLLCLKFreq_Value=72000000
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true
 PA11.Mode=Device
 RCC.ADCFreqValue=12000000
-PB13.Signal=GPIO_Input
+PB13.Signal=GPXTI13
 PA2.GPIOParameters=PinState,GPIO_Label
 PinOutPanel.RotationAngle=0
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
+SH.GPXTI13.0=GPIO_EXTI13
 TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
@@ -29,6 +32,7 @@ Mcu.IP0=ADC1
 Mcu.IP1=CRC
 PA12.Signal=USB_DP
 Mcu.UserConstants=
+SH.GPXTI13.ConfNb=1
 Mcu.ThirdPartyNb=0
 SPI1.Direction=SPI_DIRECTION_2LINES
 RCC.HCLKFreq_Value=72000000
@@ -52,6 +56,7 @@ GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 Mcu.Pin5=PA3
 ProjectManager.ProjectBuild=false
 TIM3.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
@@ -60,6 +65,7 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PB3.Mode=Trace_Asynchronous_SW
 PA4.Locked=true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+SH.GPXTI12.0=GPIO_EXTI12
 RCC.PLLMUL=RCC_PLL_MUL9
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.3
 MxDb.Version=DB.6.0.21
@@ -85,6 +91,8 @@ VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 PA10.Signal=GPIO_Output
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 PA5.GPIOParameters=GPIO_Label
+PB14.GPIOParameters=GPIO_ModeDefaultEXTI
+SH.GPXTI14.ConfNb=1
 SH.S_TIM4_CH1.1=TIM4_CH1,Input_Capture2_from_TI1
 SH.S_TIM4_CH1.0=TIM4_CH1,Input_Capture1_from_TI1
 RCC.APB1TimFreq_Value=72000000
@@ -96,6 +104,7 @@ PB4.Signal=S_TIM3_CH1
 PA3.Signal=ADCx_IN3
 PA5.Mode=TX_Only_Simplex_Unidirect_Master
 PA2.Locked=true
+PB14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 SH.S_TIM4_CH1.ConfNb=2
 ProjectManager.ProjectFileName=Probe_LA_v5_calibrate_table.ioc
@@ -117,6 +126,7 @@ PB14.Locked=true
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 TIM4.Channel-Input_Capture2_from_TI1=TIM_CHANNEL_2
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
+PB13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 RCC.FamilyName=M
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 PA13.Signal=SYS_JTMS-SWDIO
@@ -126,13 +136,14 @@ TIM4.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
+SH.GPXTI12.ConfNb=1
 ProjectManager.RegisterCallBack=
 PC13-TAMPER-RTC.Locked=true
 RCC.USBFreq_Value=48000000
 TIM4.Prescaler=72-1
 PA1.Signal=GPIO_Output
 PD0-OSC_IN.Mode=HSE-External-Oscillator
-PB14.Signal=GPIO_Input
+PB14.Signal=GPXTI14
 PA5.Signal=SPI1_SCK
 board=custom
 ProjectManager.LastFirmware=true
@@ -189,6 +200,7 @@ Mcu.Pin16=PA14
 Mcu.Pin13=PA11
 Mcu.Pin14=PA12
 Mcu.Pin19=PB6
+PB12.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 SH.S_TIM3_CH1.ConfNb=2
 ProjectManager.ComputerToolchain=false
 Mcu.Pin17=PB3
@@ -199,15 +211,14 @@ Mcu.Pin11=PB14
 Mcu.Pin12=PA10
 Mcu.Pin10=PB13
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_RESET
-PB12.GPIO_PuPd=GPIO_NOPULL
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.APB1Freq_Value=36000000
 VP_CRC_VS_CRC.Mode=CRC_Activate
 USB_DEVICE.VirtualMode=Cdc
 PA7.GPIOParameters=GPIO_Label
 ProjectManager.DeviceId=STM32F103C8Tx
-PB12.GPIOParameters=GPIO_PuPd
-PB12.Signal=GPIO_Input
+PB12.GPIOParameters=GPIO_ModeDefaultEXTI
+PB12.Signal=GPXTI12
 ProjectManager.LibraryCopy=1
 PA7.Signal=SPI1_MOSI
 isbadioc=false
