--- a/Probe_LA_v5_calibrate_table.ioc
+++ b/Probe_LA_v5_calibrate_table.ioc
@@ -1,224 +1,224 @@
 #MicroXplorer Configuration settings - do not modify
-Mcu.Family=STM32F1
-ProjectManager.MainLocation=Core/Src
-NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-RCC.MCOFreq_Value=72000000
-PB13.GPIOParameters=GPIO_ModeDefaultEXTI
-USB_DEVICE.CLASS_NAME_FS=CDC
-ProjectManager.KeepUserCode=true
-Mcu.UserName=STM32F103C8Tx
-SPI1.VirtualType=VM_MASTER
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
 ADC1.ContinuousConvMode=ENABLE
-SH.GPXTI14.0=GPIO_EXTI14
-RCC.PLLCLKFreq_Value=72000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true
-PA11.Mode=Device
-RCC.ADCFreqValue=12000000
-PB13.Signal=GPXTI13
-PA2.GPIOParameters=PinState,GPIO_Label
-PinOutPanel.RotationAngle=0
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-ProjectManager.StackSize=0x400
-PD1-OSC_OUT.Signal=RCC_OSC_OUT
-SH.GPXTI13.0=GPIO_EXTI13
-TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-RCC.FCLKCortexFreq_Value=72000000
-Mcu.IP2=NVIC
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP3=RCC
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_13CYCLES_5
+ADC1.master=1
+File.Version=6
+GPIO.groupedBy=Group By Peripherals
+KeepUserPlacement=false
+Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=CRC
-PA12.Signal=USB_DP
-Mcu.UserConstants=
-SH.GPXTI13.ConfNb=1
-Mcu.ThirdPartyNb=0
-SPI1.Direction=SPI_DIRECTION_2LINES
-RCC.HCLKFreq_Value=72000000
-SH.ADCx_IN3.0=ADC1_IN3,IN3
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=TIM3
+Mcu.IP7=TIM4
+Mcu.IP8=USB
+Mcu.IP9=USB_DEVICE
 Mcu.IPNb=10
-ProjectManager.PreviousToolchain=STM32CubeIDE
-RCC.APB2TimFreq_Value=72000000
-TIM3.Period=65000-1
-PB6.Signal=S_TIM4_CH1
-SH.ADCx_IN3.ConfNb=1
-SPI1.CalculateBaudRate=18.0 MBits/s
+Mcu.Name=STM32F103C(8-B)Tx
+Mcu.Package=LQFP48
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PD0-OSC_IN
+Mcu.Pin10=PB13
+Mcu.Pin11=PB14
+Mcu.Pin12=PA10
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PB3
+Mcu.Pin18=PB4
+Mcu.Pin19=PB6
+Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin20=VP_CRC_VS_CRC
+Mcu.Pin21=VP_SYS_VS_Systick
+Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA7
 Mcu.Pin9=PB12
-RCC.AHBFreq_Value=72000000
-PB13.Locked=true
-Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PD0-OSC_IN
-GPIO.groupedBy=Group By Peripherals
-Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin3=PA1
-Mcu.Pin4=PA2
-NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-Mcu.Pin5=PA3
-ProjectManager.ProjectBuild=false
-TIM3.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PB3.Mode=Trace_Asynchronous_SW
-PA4.Locked=true
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-SH.GPXTI12.0=GPIO_EXTI12
-RCC.PLLMUL=RCC_PLL_MUL9
-ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.3
-MxDb.Version=DB.6.0.21
-PA2.PinState=GPIO_PIN_SET
-PA1.GPIOParameters=GPIO_Label
-ProjectManager.BackupPrevious=false
-PA14.Mode=Trace_Asynchronous_SW
-TIM3.Prescaler=72-1
-SPI1.DataSize=SPI_DATASIZE_16BIT
-File.Version=6
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-SPI1.FirstBit=SPI_FIRSTBIT_MSB
-SH.S_TIM3_CH1.0=TIM3_CH1,Input_Capture1_from_TI1
-TIM4.Period=65000-1
-ProjectManager.HalAssertFull=false
-ProjectManager.ProjectName=Probe_LA_v5_calibrate_table
-RCC.PLLMCOFreq_Value=36000000
-SH.S_TIM3_CH1.1=TIM3_CH1,Input_Capture2_from_TI1
-Mcu.Package=LQFP48
-ProjectManager.ToolChainLocation=
-PA2.GPIO_Label=Relay
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-PA10.Signal=GPIO_Output
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
-PA5.GPIOParameters=GPIO_Label
-PB14.GPIOParameters=GPIO_ModeDefaultEXTI
-SH.GPXTI14.ConfNb=1
-SH.S_TIM4_CH1.1=TIM4_CH1,Input_Capture2_from_TI1
-SH.S_TIM4_CH1.0=TIM4_CH1,Input_Capture1_from_TI1
-RCC.APB1TimFreq_Value=72000000
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-PA4.GPIO_Label=AD5312_SYNC
-ProjectManager.CustomerFirmwarePackage=
-PB4.Signal=S_TIM3_CH1
-PA3.Signal=ADCx_IN3
-PA5.Mode=TX_Only_Simplex_Unidirect_Master
-PA2.Locked=true
-PB14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-SH.S_TIM4_CH1.ConfNb=2
-ProjectManager.ProjectFileName=Probe_LA_v5_calibrate_table.ioc
-PA7.Mode=TX_Only_Simplex_Unidirect_Master
-PD1-OSC_OUT.Mode=HSE-External-Oscillator
-TIM3.Channel-Input_Capture2_from_TI1=TIM_CHANNEL_2
 Mcu.PinsNb=23
-ProjectManager.NoMain=false
-SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize,FirstBit
-USB_DEVICE.VirtualModeFS=Cdc_FS
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode
-PC13-TAMPER-RTC.Signal=GPIO_Output
-RCC.USBPrescaler=RCC_USBCLKSOURCE_PLL_DIV1_5
-ProjectManager.DefaultFWLocation=true
-PD0-OSC_IN.Signal=RCC_OSC_IN
-PB12.Locked=true
-ProjectManager.DeletePrevious=true
-PB14.Locked=true
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
-TIM4.Channel-Input_Capture2_from_TI1=TIM_CHANNEL_2
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
-PB13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
-RCC.FamilyName=M
-RCC.ADCPresc=RCC_ADCPCLK2_DIV6
-PA13.Signal=SYS_JTMS-SWDIO
-TIM4.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_FALLING
-ProjectManager.TargetToolchain=STM32CubeIDE
-TIM4.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI1,Prescaler,Period,ICPolarity_CH2
-VP_CRC_VS_CRC.Signal=CRC_VS_CRC
-VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
-SH.GPXTI12.ConfNb=1
-ProjectManager.RegisterCallBack=
-PC13-TAMPER-RTC.Locked=true
-RCC.USBFreq_Value=48000000
-TIM4.Prescaler=72-1
-PA1.Signal=GPIO_Output
-PD0-OSC_IN.Mode=HSE-External-Oscillator
-PB14.Signal=GPXTI14
-PA5.Signal=SPI1_SCK
-board=custom
-ProjectManager.LastFirmware=true
+Mcu.ThirdPartyNb=0
+Mcu.UserConstants=
+Mcu.UserName=STM32F103C8Tx
+MxCube.Version=6.3.0
+MxDb.Version=DB.6.0.30
+NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.ForceEnableDMAVector=true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-RCC.VCOOutput2Freq_Value=8000000
-RCC.APB2Freq_Value=72000000
-MxCube.Version=6.2.1
-SPI1.Mode=SPI_MODE_MASTER
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=AD5312_LDAC
-VP_SYS_VS_Systick.Mode=SysTick
+PA1.Locked=true
+PA1.Signal=GPIO_Output
+PA10.Locked=true
+PA10.Signal=GPIO_Output
+PA11.Mode=Device
+PA11.Signal=USB_DM
+PA12.Mode=Device
+PA12.Signal=USB_DP
+PA13.Mode=Trace_Asynchronous_SW
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Trace_Asynchronous_SW
+PA14.Signal=SYS_JTCK-SWCLK
+PA2.GPIOParameters=PinState,GPIO_Label
+PA2.GPIO_Label=Relay
+PA2.Locked=true
+PA2.PinState=GPIO_PIN_SET
+PA2.Signal=GPIO_Output
+PA3.Locked=true
+PA3.Signal=ADCx_IN3
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=AD5312_SYNC
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=AD5312_SCLK
+PA5.Mode=TX_Only_Simplex_Unidirect_Master
+PA5.Signal=SPI1_SCK
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=AD5312_DIN
+PA7.Mode=TX_Only_Simplex_Unidirect_Master
+PA7.Signal=SPI1_MOSI
+PB12.GPIOParameters=GPIO_ModeDefaultEXTI
+PB12.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PB12.Locked=true
+PB12.Signal=GPXTI12
+PB13.GPIOParameters=GPIO_ModeDefaultEXTI
+PB13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PB13.Locked=true
+PB13.Signal=GPXTI13
+PB14.GPIOParameters=GPIO_ModeDefaultEXTI
+PB14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PB14.Locked=true
+PB14.Signal=GPXTI14
+PB3.Mode=Trace_Asynchronous_SW
+PB3.Signal=SYS_JTDO-TRACESWO
+PB4.Signal=S_TIM3_CH1
+PB6.Signal=S_TIM4_CH1
+PC13-TAMPER-RTC.Locked=true
+PC13-TAMPER-RTC.Signal=GPIO_Output
+PD0-OSC_IN.Mode=HSE-External-Oscillator
+PD0-OSC_IN.Signal=RCC_OSC_IN
+PD1-OSC_OUT.Mode=HSE-External-Oscillator
+PD1-OSC_OUT.Signal=RCC_OSC_OUT
+PinOutPanel.RotationAngle=0
+ProjectManager.AskForMigrate=true
+ProjectManager.BackupPrevious=false
+ProjectManager.CompilerOptimize=6
+ProjectManager.ComputerToolchain=false
+ProjectManager.CoupleFile=false
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
+ProjectManager.DeletePrevious=true
+ProjectManager.DeviceId=STM32F103C8Tx
+ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.4
+ProjectManager.FreePins=false
+ProjectManager.HalAssertFull=false
+ProjectManager.HeapSize=0x200
+ProjectManager.KeepUserCode=true
+ProjectManager.LastFirmware=true
+ProjectManager.LibraryCopy=1
+ProjectManager.MainLocation=Core/Src
+ProjectManager.NoMain=false
+ProjectManager.PreviousToolchain=STM32CubeIDE
+ProjectManager.ProjectBuild=false
+ProjectManager.ProjectFileName=Probe_LA_v5_calibrate_table.ioc
+ProjectManager.ProjectName=Probe_LA_v5_calibrate_table
+ProjectManager.RegisterCallBack=
+ProjectManager.StackSize=0x400
+ProjectManager.TargetToolchain=STM32CubeIDE
+ProjectManager.ToolChainLocation=
+ProjectManager.UnderRoot=true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true
+RCC.ADCFreqValue=12000000
+RCC.ADCPresc=RCC_ADCPCLK2_DIV6
+RCC.AHBFreq_Value=72000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=36000000
+RCC.APB1TimFreq_Value=72000000
+RCC.APB2Freq_Value=72000000
+RCC.APB2TimFreq_Value=72000000
+RCC.FCLKCortexFreq_Value=72000000
+RCC.FamilyName=M
+RCC.HCLKFreq_Value=72000000
+RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,USBPrescaler,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=72000000
+RCC.PLLCLKFreq_Value=72000000
+RCC.PLLMCOFreq_Value=36000000
+RCC.PLLMUL=RCC_PLL_MUL9
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.SYSCLKFreq_VALUE=72000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TimSysFreq_Value=72000000
+RCC.USBFreq_Value=48000000
+RCC.USBPrescaler=RCC_USBCLKSOURCE_PLL_DIV1_5
+RCC.VCOOutput2Freq_Value=8000000
+SH.ADCx_IN3.0=ADC1_IN3,IN3
+SH.ADCx_IN3.ConfNb=1
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
+SH.GPXTI14.0=GPIO_EXTI14
+SH.GPXTI14.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,Input_Capture1_from_TI1
+SH.S_TIM3_CH1.1=TIM3_CH1,Input_Capture2_from_TI1
+SH.S_TIM3_CH1.ConfNb=2
+SH.S_TIM4_CH1.0=TIM4_CH1,Input_Capture1_from_TI1
+SH.S_TIM4_CH1.1=TIM4_CH1,Input_Capture2_from_TI1
+SH.S_TIM4_CH1.ConfNb=2
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI1.CalculateBaudRate=18.0 MBits/s
+SPI1.DataSize=SPI_DATASIZE_16BIT
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.FirstBit=SPI_FIRSTBIT_MSB
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize,FirstBit
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
+TIM3.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM3.Channel-Input_Capture2_from_TI1=TIM_CHANNEL_2
 TIM3.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_FALLING
 TIM3.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI1,Prescaler,Period,TIM_MasterOutputTrigger,ICPolarity_CH2
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA4.GPIOParameters=GPIO_Label
-PA13.Mode=Trace_Asynchronous_SW
-ProjectManager.FreePins=false
-RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,USBPrescaler,VCOOutput2Freq_Value
-ProjectManager.AskForMigrate=true
-Mcu.Name=STM32F103C(8-B)Tx
-PA2.Signal=GPIO_Output
-ProjectManager.UnderRoot=true
-Mcu.IP8=USB
-Mcu.IP9=USB_DEVICE
-Mcu.IP6=TIM3
-Mcu.IP7=TIM4
-ProjectManager.CoupleFile=false
-PB3.Signal=SYS_JTDO-TRACESWO
-PA4.Signal=GPIO_Output
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_13CYCLES_5
-RCC.SYSCLKFreq_VALUE=72000000
-Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-RCC.TimSysFreq_Value=72000000
-PA1.Locked=true
-PA7.GPIO_Label=AD5312_DIN
-Mcu.Pin20=VP_CRC_VS_CRC
-ADC1.master=1
-PA3.Locked=true
-Mcu.Pin21=VP_SYS_VS_Systick
-PA12.Mode=Device
-PA5.GPIO_Label=AD5312_SCLK
-PA10.Locked=true
-NVIC.ForceEnableDMAVector=true
-KeepUserPlacement=false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-ProjectManager.CompilerOptimize=6
-ADC1.Rank-1\#ChannelRegularConversion=1
-PA11.Signal=USB_DM
-PA14.Signal=SYS_JTCK-SWCLK
-ProjectManager.HeapSize=0x200
-Mcu.Pin15=PA13
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PA14
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
-Mcu.Pin19=PB6
-PB12.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
-SH.S_TIM3_CH1.ConfNb=2
-ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PB3
-Mcu.Pin18=PB4
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-ADC1.NbrOfConversionFlag=1
-Mcu.Pin11=PB14
-Mcu.Pin12=PA10
-Mcu.Pin10=PB13
+TIM3.Period=65000-1
+TIM3.Prescaler=72-1
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_RESET
-NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-RCC.APB1Freq_Value=36000000
-VP_CRC_VS_CRC.Mode=CRC_Activate
+TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM4.Channel-Input_Capture2_from_TI1=TIM_CHANNEL_2
+TIM4.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_FALLING
+TIM4.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI1,Prescaler,Period,ICPolarity_CH2
+TIM4.Period=65000-1
+TIM4.Prescaler=72-1
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
-PA7.GPIOParameters=GPIO_Label
-ProjectManager.DeviceId=STM32F103C8Tx
-PB12.GPIOParameters=GPIO_ModeDefaultEXTI
-PB12.Signal=GPXTI12
-ProjectManager.LibraryCopy=1
-PA7.Signal=SPI1_MOSI
-isbadioc=false
+USB_DEVICE.VirtualModeFS=Cdc_FS
+VP_CRC_VS_CRC.Mode=CRC_Activate
+VP_CRC_VS_CRC.Signal=CRC_VS_CRC
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
+board=custom
+isbadioc=true
