--- a/Probe_LA.ioc
+++ b/Probe_LA.ioc
@@ -38,7 +38,9 @@ Mcu.Pin19=PB6
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin20=VP_CRC_VS_CRC
 Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin22=VP_TIM3_VS_indirect_ch1
+Mcu.Pin23=VP_TIM4_VS_indirect_ch1
+Mcu.Pin24=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -46,7 +48,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA7
 Mcu.Pin9=PB12
-Mcu.PinsNb=23
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -184,11 +186,9 @@ SH.GPXTI13.ConfNb=1
 SH.GPXTI14.0=GPIO_EXTI14
 SH.GPXTI14.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,Input_Capture1_from_TI1
-SH.S_TIM3_CH1.1=TIM3_CH1,Input_Capture2_from_TI1
-SH.S_TIM3_CH1.ConfNb=2
+SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,Input_Capture1_from_TI1
-SH.S_TIM4_CH1.1=TIM4_CH1,Input_Capture2_from_TI1
-SH.S_TIM4_CH1.ConfNb=2
+SH.S_TIM4_CH1.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CalculateBaudRate=18.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_16BIT
@@ -198,18 +198,18 @@ SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM3.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM3.Channel-Input_Capture2_from_TI1=TIM_CHANNEL_2
+TIM3.Channel-Input_Capture2_from_TI1_63=TIM_CHANNEL_2
 TIM3.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_FALLING
-TIM3.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI1,Prescaler,Period,TIM_MasterOutputTrigger,ICPolarity_CH2
+TIM3.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,TIM_MasterOutputTrigger,ICPolarity_CH2,Channel-Input_Capture2_from_TI1_63
 TIM3.Period=65000-1
-TIM3.Prescaler=72-1
+TIM3.Prescaler=8-1
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
-TIM4.Channel-Input_Capture2_from_TI1=TIM_CHANNEL_2
+TIM4.Channel-Input_Capture2_from_TI1_63=TIM_CHANNEL_2
 TIM4.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_FALLING
-TIM4.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI1,Prescaler,Period,ICPolarity_CH2
+TIM4.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,ICPolarity_CH2,Channel-Input_Capture2_from_TI1_63
 TIM4.Period=65000-1
-TIM4.Prescaler=72-1
+TIM4.Prescaler=8-1
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
@@ -218,6 +218,10 @@ VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM3_VS_indirect_ch1.Mode=Input_Capture2_from_TI1_63
+VP_TIM3_VS_indirect_ch1.Signal=TIM3_VS_indirect_ch1
+VP_TIM4_VS_indirect_ch1.Mode=Input_Capture2_from_TI1_63
+VP_TIM4_VS_indirect_ch1.Signal=TIM4_VS_indirect_ch1
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
