--- a/Probe_LA.ioc
+++ b/Probe_LA.ioc
@@ -1,60 +1,49 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.ContinuousConvMode=ENABLE
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode
-ADC1.NbrOfConversionFlag=1
-ADC1.Rank-1\#ChannelRegularConversion=1
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_13CYCLES_5
-ADC1.master=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=ADC1
-Mcu.IP1=CRC
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=TIM3
-Mcu.IP7=TIM4
-Mcu.IP8=USB
-Mcu.IP9=USB_DEVICE
-Mcu.IPNb=10
+Mcu.IP0=CRC
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SPI1
+Mcu.IP4=SYS
+Mcu.IP5=TIM3
+Mcu.IP6=TIM4
+Mcu.IP7=USB
+Mcu.IP8=USB_DEVICE
+Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PB13
-Mcu.Pin11=PB14
-Mcu.Pin12=PA10
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PB3
-Mcu.Pin18=PB4
-Mcu.Pin19=PB6
-Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=VP_CRC_VS_CRC
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_TIM3_VS_indirect_ch1
-Mcu.Pin23=VP_TIM4_VS_indirect_ch1
-Mcu.Pin24=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin3=PA1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PA7
-Mcu.Pin9=PB12
-Mcu.PinsNb=25
+Mcu.Pin0=PD0-OSC_IN
+Mcu.Pin1=PD1-OSC_OUT
+Mcu.Pin10=PA11
+Mcu.Pin11=PA12
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PA15
+Mcu.Pin15=PB3
+Mcu.Pin16=PB4
+Mcu.Pin17=PB6
+Mcu.Pin18=VP_CRC_VS_CRC
+Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin2=PA1
+Mcu.Pin20=VP_TIM3_VS_indirect_ch1
+Mcu.Pin21=VP_TIM4_VS_indirect_ch1
+Mcu.Pin22=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin3=PA2
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA7
+Mcu.Pin7=PB12
+Mcu.Pin8=PB13
+Mcu.Pin9=PB14
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.3.0
 MxDb.Version=DB.6.0.30
-NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -74,8 +63,6 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=AD5312_LDAC
 PA1.Locked=true
 PA1.Signal=GPIO_Output
-PA10.Locked=true
-PA10.Signal=GPIO_Output
 PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
@@ -84,13 +71,19 @@ PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.GPIOParameters=PinState,GPIO_Label
-PA2.GPIO_Label=Relay
+PA15.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PA15.GPIO_Label=POLARITY_CONTROL
+PA15.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PA15.GPIO_PuPd=GPIO_PULLDOWN
+PA15.Locked=true
+PA15.PinState=GPIO_PIN_RESET
+PA15.Signal=GPIO_Output
+PA2.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
+PA2.GPIO_Label=RELAY_CONTROL
+PA2.GPIO_PuPd=GPIO_PULLDOWN
 PA2.Locked=true
-PA2.PinState=GPIO_PIN_SET
+PA2.PinState=GPIO_PIN_RESET
 PA2.Signal=GPIO_Output
-PA3.Locked=true
-PA3.Signal=ADCx_IN3
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=AD5312_SYNC
 PA4.Locked=true
@@ -119,8 +112,6 @@ PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-TRACESWO
 PB4.Signal=S_TIM3_CH1
 PB6.Signal=S_TIM4_CH1
-PC13-TAMPER-RTC.Locked=true
-PC13-TAMPER-RTC.Signal=GPIO_Output
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -153,7 +144,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_CRC_Init-CRC-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
@@ -177,8 +168,6 @@ RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=48000000
 RCC.USBPrescaler=RCC_USBCLKSOURCE_PLL_DIV1_5
 RCC.VCOOutput2Freq_Value=8000000
-SH.ADCx_IN3.0=ADC1_IN3,IN3
-SH.ADCx_IN3.ConfNb=1
 SH.GPXTI12.0=GPIO_EXTI12
 SH.GPXTI12.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
@@ -202,14 +191,14 @@ TIM3.Channel-Input_Capture2_from_TI1_63=TIM_CHANNEL_2
 TIM3.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_FALLING
 TIM3.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,TIM_MasterOutputTrigger,ICPolarity_CH2,Channel-Input_Capture2_from_TI1_63
 TIM3.Period=65000-1
-TIM3.Prescaler=8-1
+TIM3.Prescaler=72-1
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM4.Channel-Input_Capture2_from_TI1_63=TIM_CHANNEL_2
 TIM4.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_FALLING
 TIM4.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,ICPolarity_CH2,Channel-Input_Capture2_from_TI1_63
 TIM4.Period=65000-1
-TIM4.Prescaler=8-1
+TIM4.Prescaler=72-1
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
