--- a/Probe_LA.ioc
+++ b/Probe_LA.ioc
@@ -42,8 +42,8 @@ Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
-MxCube.Version=6.3.0
-MxDb.Version=DB.6.0.30
+MxCube.Version=6.4.0
+MxDb.Version=DB.6.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -200,7 +200,9 @@ TIM4.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,Period,ICPolarity_CH
 TIM4.Period=65000-1
 TIM4.Prescaler=72-1
 USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING,PRODUCT_STRING_CDC_FS
+USB_DEVICE.MANUFACTURER_STRING=GRANIT
+USB_DEVICE.PRODUCT_STRING_CDC_FS=GRANIT_LA_PROBE
 USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 VP_CRC_VS_CRC.Mode=CRC_Activate
